cmake_minimum_required(VERSION 3.13)
project(TreasureHunt2k19)

set(CMAKE_CXX_STANDARD 14)

add_executable(TreasureHunt2k19 main.cpp Map.cpp Map.h TreasureHunters.cpp TreasureHunters.h BrannBronzebeard.cpp BrannBronzebeard.h IndianaJhony.cpp IndianaJhony.h RenoJackson.cpp RenoJackson.h JhonMattera.cpp JhonMattera.h Game.cpp Game.h)